--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -741,27 +741,27 @@ grafana.ini:
  #    root_url:
  # https://grafana.com/docs/grafana/latest/auth/github/#enable-github-in-grafana
   auth.generic_oauth:
-    ¦ enabled: false
-    ¦ client_id: grafana    #this is a sample client_id, review docs/KEYCLOAK.md
-    ¦ client_secret: secret #this is a sample secret, review docs/KEYCLOAK.md
-    ¦ scopes: Grafana       #this is a sample client scope, review docs/KEYCLOAK.md
-    ¦ auth_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/auth
-    ¦ token_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/token
-    ¦ api_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/userinfo
-    ¦ allow_sign_up: true
-    ¦ role_attribute_path: Viewer
-      # tls_skip_verify_insecure: false
-      # tls_client_cert: ""
-      # tls_client_key: ""
-      # tls_client_ca : /etc/oidc/ca.pem
-      # allowed_domains: mycompany.com mycompany.org
-      # empty_scopes: false
+    enabled: false
+    client_id: grafana    #this is a sample client_id, review docs/KEYCLOAK.md
+    client_secret: secret #this is a sample secret, review docs/KEYCLOAK.md
+    scopes: Grafana       #this is a sample client scope, review docs/KEYCLOAK.md
+    auth_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/auth
+    token_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/token
+    api_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/userinfo
+    allow_sign_up: true
+    role_attribute_path: Viewer
+    # tls_skip_verify_insecure: false
+    # tls_client_cert: ""
+    # tls_client_key: ""
+    # tls_client_ca : /etc/oidc/ca.pem
+    # allowed_domains: mycompany.com mycompany.org
+    # empty_scopes: false
   plugin.grafana-piechart-panel:
-    ¦ path: /var/lib/bb-plugins/piechart-panel
-    plugin.grafana-polystat-panel:
-    ¦ path: /var/lib/bb-plugins/polystat-panel
-    plugin.redis-datasource:
-    ¦ path: /var/lib/bb-plugins/redis-datasource
+    path: /var/lib/bb-plugins/piechart-panel
+  plugin.grafana-polystat-panel:
+    path: /var/lib/bb-plugins/polystat-panel
+  plugin.redis-datasource:
+    path: /var/lib/bb-plugins/redis-datasource
  # auth.github:
  #    enabled: false
  #    allow_sign_up: false
