Added default data source to test-values.yaml

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -5,7 +5,15 @@ bbtests:
 
 networkPolicies:
   enabled: true
-
+datasources:
+  datasourcesbb.yaml:
+    apiVersion: 1
+    datasources:
+    - name: Prometheus
+      type: prometheus
+      access: proxy
+      url: http://monitoring-kube-prometheus.monitoring.svc:9090
+      isDefault: true
 dashboards:
   default:
     k8s-deployment:
