--- a/chart/templates/bigbang/networkpolicies/allow-in-ns.yaml
+++ b/chart/templates/bigbang/networkpolicies/allow-in-ns.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.networkPolicies.enabled (ne .Release.Namespace "monitoring") }}
+{{ if and .Values.networkPolicies.enabled (and (ne .Release.Namespace "grafana") (ne .Release.Namespace "monitoring")) }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
