--- a/chart/templates/bigbang/networkpolicies/allow-monitoring.yaml
+++ b/chart/templates/bigbang/networkpolicies/allow-monitoring.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.networkPolicies.enabled .Values.serviceMonitor.enabled (ne .Release.Namespace "monitoring") }}
+{{- if and .Values.networkPolicies.enabled .Values.serviceMonitor.enabled (and (ne .Release.Namespace "grafana") (ne .Release.Namespace "monitoring")) }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
