--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -16,7 +16,8 @@ global:
 rbac:
   create: true
   ## Use an existing ClusterRole/Role (depending on rbac.namespaced false/true)
-  # useExistingRole: name-of-some-(cluster)role
+  # useExistingRole: name-of-some-role
+  # useExistingClusterRole: name-of-some-clusterRole
   pspEnabled: false
   pspUseAppArmor: false
   namespaced: false
@@ -57,6 +58,7 @@ autoscaling:
 ## See `kubectl explain poddisruptionbudget.spec` for more
 ## ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
 podDisruptionBudget: {}
+#  apiVersion: ""
 #  minAvailable: 1
 #  maxUnavailable: 1
 
@@ -86,7 +88,7 @@ livenessProbe:
 image:
   repository: registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins
   # Overrides the Grafana image tag whose default is the chart appVersion
-  tag: "10.0.3"
+  tag: "10.1.5"
   #sha: ""
   pullPolicy: IfNotPresent
 
@@ -623,21 +625,22 @@ alerting: {}
   #           labels:
   #             team: sre_team_1
   # contactpoints.yaml:
-  #   apiVersion: 1
-  #   contactPoints:
-  #     - orgId: 1
-  #       name: cp_1
-  #       receivers:
-  #         - uid: first_uid
-  #           type: pagerduty
-  #           settings:
-  #             integrationKey: XXX
-  #             severity: critical
-  #             class: ping failure
-  #             component: Grafana
-  #             group: app-stack
-  #             summary: |
-  #               {{ `{{ include "default.message" . }}` }}
+  #   secret:
+  #     apiVersion: 1
+  #     contactPoints:
+  #       - orgId: 1
+  #         name: cp_1
+  #         receivers:
+  #           - uid: first_uid
+  #             type: pagerduty
+  #             settings:
+  #               integrationKey: XXX
+  #               severity: critical
+  #               class: ping failure
+  #               component: Grafana
+  #               group: app-stack
+  #               summary: |
+  #                 {{ `{{ include "default.message" . }}` }}
 
 ## Configure notifiers
 ## ref: http://docs.grafana.org/administration/provisioning/#alert-notification-channels
@@ -744,28 +747,6 @@ grafana.ini:
       # The full public facing url you use in browser, used for redirects and emails
  #    root_url:
  # https://grafana.com/docs/grafana/latest/auth/github/#enable-github-in-grafana
-  auth.generic_oauth:
-    enabled: false
-    client_id: grafana    #this is a sample client_id, review docs/KEYCLOAK.md
-    client_secret: secret #this is a sample secret, review docs/KEYCLOAK.md
-    scopes: Grafana       #this is a sample client scope, review docs/KEYCLOAK.md
-    auth_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/auth
-    token_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/token
-    api_url: https://login.dso.mil/auth/realms/baby-yoda/protocol/openid-connect/userinfo
-    allow_sign_up: true
-    role_attribute_path: Viewer
-    # tls_skip_verify_insecure: false
-    # tls_client_cert: ""
-    # tls_client_key: ""
-    # tls_client_ca : /etc/oidc/ca.pem
-    # allowed_domains: mycompany.com mycompany.org
-    # empty_scopes: false
-  plugin.grafana-piechart-panel:
-    path: /var/lib/bb-plugins/piechart-panel
-  plugin.grafana-polystat-panel:
-    path: /var/lib/bb-plugins/polystat-panel
-  plugin.redis-datasource:
-    path: /var/lib/bb-plugins/redis-datasource
  # auth.github:
  #    enabled: false
  #    allow_sign_up: false
@@ -822,7 +803,7 @@ smtp:
 sidecar:
   image:
     repository: registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar
-    tag: 1.25.0
+    tag: 1.25.2
   imagePullPolicy: IfNotPresent
   resources:
     limits:
@@ -898,7 +879,6 @@ sidecar:
     labelValue: "1"
     # Log level. Can be one of: DEBUG, INFO, WARN, ERROR, CRITICAL.
     # logLevel: INFO
-    annotations: {}
     # folder in the pod that should hold the collected dashboards (unless `defaultFolderName` is set)
     folder: /tmp/dashboards
     # The default folder name, it will create a subfolder under the `folder` and put dashboards in there instead
