updating codeowners to aline with mission team

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ryan.thompson.44 @ryan.j.garcia @rgsjustins
+* @ryan.thompson.44 @ryan.j.garcia @staskiewicz.blane @jimmyungerman @dhilgaertner2 @steven.donald @piotr.machaj @daniel.dides @alieberman
