--- a/renovate.json
+++ b/renovate.json
@@ -1,1 +1,53 @@
-{}
+{
+    "baseBranches": ["main"],
+    "configWarningReuseIssue": false,
+    "dependencyDashboard": true,
+    "dependencyDashboardHeader": "- [ ] Sync upstream helm chart version with updated dependencies.",
+    "dependencyDashboardTitle": "Renovate: Upgrade Grafana Package Dependencies",
+    "dependencyDashboardLabels": ["kind::maintenance", "priority::2", "team::Observability"],
+    "draftPR": true,
+    "enabledManagers": ["helm-values", "regex"],
+    "ignorePaths": ["chart/charts/**"],
+    "labels": ["renovate"],
+    "commitMessagePrefix": "SKIP UPDATE CHECK",
+    "packageRules": [
+        {
+            "matchDatasources": ["docker"],
+            "groupName": "Ironbank"
+        }
+    ],
+    "regexManagers": [
+        {
+            "fileMatch": ["^chart/values\\.yaml$"],
+            "matchStrings": [
+              "^\\s+image:\\s+(?<depName>.+):(?<currentValue>.+)"
+            ],
+            "datasourceTemplate": "docker"
+        },
+        {
+            "fileMatch": ["^chart/values\\.yaml$"],
+            "matchStrings": [
+                "image:\\s+registry:\\s+repository:\\s+[^/]+/(?<depName>.+)\\s+tag:\\s+(?<currentValue>.+)"
+            ],
+            "datasourceTemplate": "docker",
+	        "registryUrlTemplate": "https://registry1.dso.mil"
+        },
+        {
+            "fileMatch": ["^chart/Chart\\.yaml$"],
+            "matchStrings": [
+                "- Grafana:\\s+(?<currentValue>.+)",
+                "appVersion:\\s+(?<currentValue>.+)" 
+            ],
+            "depNameTemplate": "registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins",
+            "datasourceTemplate": "docker"
+        },
+        {
+            "fileMatch": ["^chart/Chart\\.yaml$"],
+            "matchStrings": [
+                "image:[^\\S\\r\\n]+(?<depName>.+):(?<currentValue>.+)"
+            ],
+            "datasourceTemplate": "docker"
+        }
+    ],
+    "separateMajorMinor": false
+}
