Resolve "Grafana/Istio: Stop exposing grafana virtualservice's /metrics endpoint"

--- a/chart/templates/bigbang/virtualservices/grafana-vs.yaml
+++ b/chart/templates/bigbang/virtualservices/grafana-vs.yaml
@@ -26,6 +26,11 @@ spec:
     - {{ tpl . $}}
   {{- end }}
   http:
+    - match:
+      - uri:
+          prefix: "/metrics"
+      redirect:
+        uri: "/"
     - route:
         - destination:
             port:
