Update gluon to 0.4.8

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1394,6 +1394,9 @@ bbtests:
       requests:
         cpu: 2
         memory: 2Gi
+      limits:
+        cpu: 2
+        memory: 2Gi
   istio:
     sidecar:
       resources:
