--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: grafana
-version: 7.2.1-bb.5
-appVersion: 10.2.3
+version: 7.3.0-bb.0
+appVersion: 10.3.1
 kubeVersion: "^1.8.0-0"
 description: The leading tool for querying and visualizing time series and metrics.
 home: https://grafana.com
@@ -10,17 +10,17 @@ sources:
   - https://github.com/grafana/grafana
   - https://github.com/grafana/helm-charts
 annotations:
-  "artifacthub.io/license": AGPL-3.0-only
+  "artifacthub.io/license": Apache-2.0
   "artifacthub.io/links": |
     - name: Chart Source
       url: https://github.com/grafana/helm-charts
     - name: Upstream Project
       url: https://github.com/grafana/grafana
   bigbang.dev/applicationVersions: |
-    - Grafana: 10.2.3
+    - Grafana: 10.3.1
   helm.sh/images: |
     - name: grafana
-      image: registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins:10.2.3
+      image: registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins:10.3.1
     - name: k8s-sidecar
       image: registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar:1.25.3
     - name: init-chown-data
