--- a/chart/templates/bigbang/auth-policies/allow-namespace.yaml
+++ b/chart/templates/bigbang/auth-policies/allow-namespace.yaml
@@ -5,7 +5,10 @@ metadata:
  name: allow-all-in-namespace
  namespace: {{ .Release.Namespace }}
 spec:
- rules:
- - {}
+  action: ALLOW
+  rules:
+  - from:
+    - source:
+        namespaces: [{{ .Release.Namespace | quote }}]
 {{- end }}
 
