--- a/chart/templates/bigbang/istio/sidecar.yaml
+++ b/chart/templates/bigbang/istio/sidecar.yaml
@@ -6,8 +6,11 @@ metadata:
   name: {{ .Release.Name }}-sidecar
   namespace: {{.Release.Namespace}}
   labels:
-    name: authservice
+    {{- include "grafana.labels" $ | nindent 4 }}
 spec:
+  workloadSelector:
+    labels:
+      {{- include "grafana.selectorLabels" $ | nindent 6 }}
   outboundTrafficPolicy:
     mode: {{ .Values.istio.hardened.outboundTrafficPolicyMode }}
 {{- end }}
