SKIP UPDATE CHECK Update file CODEOWNERS

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @jimmyungerman @dhilgaertner2 @daniel.dides @piotr.machaj @ryan.j.garcia @ryan.thompson.44 @staskiewicz.blane @steven.donald
+* @jimmyungerman @dhilgaertner2 @piotr.machaj @ryan.j.garcia @ryan.thompson.44 @staskiewicz.blane @steven.donald
