--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -40,15 +40,21 @@ serviceAccount:
   nameTest:
   ## ServiceAccount labels.
   labels: {}
-## Service account annotations. Can be templated.
-#  annotations:
-#    eks.amazonaws.com/role-arn: arn:aws:iam::123456789000:role/iam-role-name-here
-  autoMount: true
+  ## Service account annotations. Can be templated.
+  #  annotations:
+  #    eks.amazonaws.com/role-arn: arn:aws:iam::123456789000:role/iam-role-name-here
+
+  ## autoMount is deprecated in favor of automountServiceAccountToken
+  # autoMount: false
+  automountServiceAccountToken: false
 
 replicas: 1
 
 ## Create a headless service for the deployment
 headlessService: false
+
+## Should the service account be auto mounted on the pod
+automountServiceAccountToken: true
 
 ## Create HorizontalPodAutoscaler object for deployment type
 #
@@ -93,7 +99,7 @@ livenessProbe:
 image:
   repository: ironbank/big-bang/grafana/grafana-plugins
   # Overrides the Grafana image tag whose default is the chart appVersion
-  tag: "10.3.3"
+  tag: "10.4.0"
   #sha: ""
   pullPolicy: IfNotPresent
 
@@ -853,7 +859,7 @@ smtp:
 sidecar:
   image:
     repository: ironbank/kiwigrid/k8s-sidecar
-    tag: 1.25.4
+    tag: 1.26.1
   imagePullPolicy: IfNotPresent
   resources:
     limits:
