Resolve "Add custom network policies"

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1371,6 +1371,7 @@ networkPolicies:
   ingressLabels:
     app: public-ingressgateway
     istio: ingressgateway
+  additionalPolicies: []
 defaultDashboardsEditable: true
 
 domain: bigbang.dev
