--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -768,6 +768,7 @@ grafana.ini:
     plugins: /var/lib/grafana/plugins
     provisioning: /etc/grafana/provisioning
   analytics:
+    reporting_enabled: false
     check_for_updates: false
   log:
     mode: console
