Resolve "Use IronBank bats image"

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -113,7 +113,7 @@ image:
 
 testFramework:
   enabled: false
-  image: docker.io/bats/bats
+  image: ironbank/opensource/bats/bats
   tag: "v1.4.1"
   imagePullPolicy: IfNotPresent
   securityContext: {}
