--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1408,6 +1408,7 @@ domain: dev.bigbang.mil
 
 istio:
   enabled: false
+  namespace: istio-system
   hardened:
     enabled: false
     outboundTrafficPolicyMode: "REGISTRY_ONLY"
