--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
       labels:
         {{- include "grafana.selectorLabels" . | nindent 8 }}
         {{- with .Values.podLabels }}
-        {{- toYaml . | nindent 8 }}
+        {{- tpl (toYaml . | nindent 8) $ }}
         {{- end }}
       annotations:
         checksum/config: {{ include "grafana.configData" . | sha256sum }}
