--- a/chart/templates/statefulset.yaml
+++ b/chart/templates/statefulset.yaml
@@ -22,7 +22,7 @@ spec:
       labels:
         {{- include "grafana.selectorLabels" . | nindent 8 }}
         {{- with .Values.podLabels }}
-        {{- toYaml . | nindent 8 }}
+        {{- tpl (toYaml . | nindent 8) $ }}
         {{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
