Resolve "Set required labels for kiali (update to new umbrella pattern)"

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -211,9 +211,7 @@ downloadDashboards:
   # argocd.argoproj.io/sync-options: Replace=true
 
 ## Pod Labels
-podLabels:
-  app: monitoring-grafana
-  version: "{{ .Chart.AppVersion }}"
+podLabels: {}
 
 podPortName: grafana
 gossipPortName: gossip
