SKIP UPDATE CHECK SKIP UPGRADE CHECK test-values disables

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1,10 +1,10 @@
 #########################
 # Disable Core Packages #
 #########################
-# grafana:
-#   enabled: false
-# monitoring:
-#   enabled: false
+bbctl:
+  enabled: false
+alloy:
+  enabled: false
 kyvernoReporter:
   enabled: false
 neuvector:
