--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: grafana
-version: 10.0.0-bb.0
+version: 10.0.0-bb.1
 appVersion: 12.2.0
 kubeVersion: "^1.8.0-0"
 description: The leading tool for querying and visualizing time series and metrics.
@@ -40,6 +40,9 @@ dependencies:
     version: 10.0.0
     repository: https://grafana.github.io/helm-charts
     alias: upstream
+  - name: bb-common
+    version: 0.8.2
+    repository: oci://registry1.dso.mil/bigbang
 keywords:
   - monitoring
   - metric
